// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test CardUser component should render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TranslationComponent
    age={36}
    city="New York"
    coincidences={24}
    gender="Male"
    matching={76}
    networks={
      Array [
        "facebook",
        "twitter",
        "steam",
      ]
    }
    nickname="JohnDoe"
    onClickHandler={[MockFunction]}
    photo="http://via.placeholder.com/100x100"
    resume="foo"
    similarity={85}
    size="small"
    strings={
      Object {
        "coincidences": "Coincidences",
        "matching": "Matching",
        "similarity": "Similarity",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "age": 36,
      "city": "New York",
      "coincidences": 24,
      "gender": "Male",
      "locale": undefined,
      "matching": 76,
      "networks": Array [
        "facebook",
        "twitter",
        "steam",
      ],
      "nickname": "JohnDoe",
      "onClickHandler": [MockFunction],
      "photo": "http://via.placeholder.com/100x100",
      "resume": "foo",
      "similarity": 85,
      "size": "small",
      "strings": Object {
        "coincidences": "Coincidences",
        "matching": "Matching",
        "similarity": "Similarity",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "age": 36,
        "city": "New York",
        "coincidences": 24,
        "gender": "Male",
        "locale": undefined,
        "matching": 76,
        "networks": Array [
          "facebook",
          "twitter",
          "steam",
        ],
        "nickname": "JohnDoe",
        "onClickHandler": [MockFunction],
        "photo": "http://via.placeholder.com/100x100",
        "resume": "foo",
        "similarity": 85,
        "size": "small",
        "strings": Object {
          "coincidences": "Coincidences",
          "matching": "Matching",
          "similarity": "Similarity",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Test CardUser component should render correctly 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TranslationComponent
    age={30}
    city="New Jersey"
    coincidences={101}
    gender="Female"
    matching={89}
    networks={
      Array [
        "tumblr",
        "spotify",
        "instagram",
        "facebook",
        "twitter",
        "steam",
      ]
    }
    nickname="JaneDoe"
    onClickHandler={[MockFunction]}
    photo="http://via.placeholder.com/100x100"
    resume="bar"
    similarity={34}
    size="medium"
    strings={
      Object {
        "coincidences": "Coincidences",
        "matching": "Matching",
        "similarity": "Similarity",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "age": 30,
      "city": "New Jersey",
      "coincidences": 101,
      "gender": "Female",
      "locale": undefined,
      "matching": 89,
      "networks": Array [
        "tumblr",
        "spotify",
        "instagram",
        "facebook",
        "twitter",
        "steam",
      ],
      "nickname": "JaneDoe",
      "onClickHandler": [MockFunction],
      "photo": "http://via.placeholder.com/100x100",
      "resume": "bar",
      "similarity": 34,
      "size": "medium",
      "strings": Object {
        "coincidences": "Coincidences",
        "matching": "Matching",
        "similarity": "Similarity",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "age": 30,
        "city": "New Jersey",
        "coincidences": 101,
        "gender": "Female",
        "locale": undefined,
        "matching": 89,
        "networks": Array [
          "tumblr",
          "spotify",
          "instagram",
          "facebook",
          "twitter",
          "steam",
        ],
        "nickname": "JaneDoe",
        "onClickHandler": [MockFunction],
        "photo": "http://via.placeholder.com/100x100",
        "resume": "bar",
        "similarity": 34,
        "size": "medium",
        "strings": Object {
          "coincidences": "Coincidences",
          "matching": "Matching",
          "similarity": "Similarity",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
